argh/tests/ui/duplicate-name/duplicate-long-name.stderr
error: The long name of "--foo" was already used here.
 --> tests/ui/duplicate-name/duplicate-long-name.rs:4:5
  |
4 | /     /// foo1
5 | |     #[argh(option, long = "foo")]
6 | |     foo1: u32,
  | |_____________^

error: Later usage here.
  --> tests/ui/duplicate-name/duplicate-long-name.rs:8:5
   |
8  | /     /// foo2
9  | |     #[argh(option, long = "foo")]
10 | |     foo2: u32,
   | |_____________^

error: The long name of "--bar" was already used here.
  --> tests/ui/duplicate-name/duplicate-long-name.rs:12:5
   |
12 | /     /// bar1
13 | |     #[argh(option, long = "bar")]
14 | |     bar1: u32,
   | |_____________^

error: Later usage here.
  --> tests/ui/duplicate-name/duplicate-long-name.rs:16:5
   |
16 | /     /// bar2
17 | |     #[argh(option, long = "bar")]
18 | |     bar2: u32,
   | |_____________^
